2009-01-20  Peter Bloomfield

	* libbalsa/gmime-stream-gio.c: (stream_read, stream_write,
	stream_seek, stream_substream,
	g_mime_stream_gio_new_with_bounds): build on 32-bit box with
	GMime-2.2.
	* libbalsa/gmime-stream-gio.h: ditto.

2009-01-20  Peter Bloomfield

	Fix BUG - threading view and selecting, reported by Mario
	Mikocevic <mario.mikocevic t-com hr>
	(http://mail.gnome.org/archives/balsa-list/2009-January/msg00015.html)

	* src/balsa-index.h: new boolean BalsaIndex::collapsing.
	* src/balsa-index.c:
	(bndx_test_collapse_row_cb) new callback to set it;
	(bndx_tree_collapse_cb): clear it;
	(bndx_selection_changed): use it to manage preview;
	(bndx_instance_init) connect to "test-collapse-row" signal to
	set it;

2009-01-18  Paweł Sałek

	* NEWS, configure.in: release 2.3.28

2009-01-16  Peter Bloomfield

	* libbalsa/misc.c: (libbalsa_set_fallback_codeset): do not
	allocate and leak strings, now that bug #509434 has been fixed.
	* src/balsa-icons.c: (load_balsa_pixmap): free the icon_source.
	* src/save-restore.c: include stdlib.h.
	* src/sendmsg-window.c: (delete_handler, sendmsg_window_set_title):
	do not leak address list.

2009-01-16  Paweł Sałek

	* libbalsa/files.c: simplify conditional code.
	* libbalsa/mailbox_imap.c: the only way to make sure that the
	exist handler does not trigger imap operations and a related
	deadlock is to process it entirely in an idle handler. Fetch
	message data using seqnos, otherwise we can get surprising EXPUNGE
	notifications. 
	* libbalsa/imap/imap-handle.c: some imap servers send data in the
	same packet as the IDLE prompt. Process it immediately.

2009-01-15  Peter Bloomfield

	* src/print-gtk.c: (add_margin_spinbtn): do not leak string.

2009-01-10  Peter Bloomfield

	* src/main-window.c: fix string--marcel telka sk (fixes bug
	#567323).

2009-01-03  Peter Bloomfield

	* src/sendmsg-window.c: (send_message_handler): fix
	string--leonardof gnome org (fixes bug #566426).

2009-01-03  Peter Bloomfield
